[package]
name = "learn-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
log4rs = "1.1.1"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde="1.0.143"
serde_json = "1.0"
lazy_static="1.4.0"
dashmap="5.4.0"